Modify location of roll & lock in buttons and ensure results are always visible

--- a/style.css
+++ b/style.css
@@ -891,7 +891,8 @@
         display: flex;
         justify-content: center;
         gap: 15px;
-        margin-bottom: 12px;
+        margin-top: 15px;
+        margin-bottom: 15px;
         font-size: 0.75rem;
         }
 
@@ -975,10 +976,11 @@
         top: 0;
         bottom: auto;
         flex-direction: column;
-        width: 80px;
+        width: 60px;
         height: 100vh;
         justify-content: flex-start;
-        padding-top: 20px;
+        padding-top: 30px;
+        padding-left: 30px;
         }
         
         .content {
